# vesper

./: .gitignore  Cargo.toml  README.md
extensions/vesper-vscode/: README.md  extension.js  package.json
vesper-agent/: Cargo.toml
vesper-agent/src/: lib.rs  native_tools.rs  protocol.rs  runtime.rs
vesper-agent/tests/: tool_loop.rs
vesper-cli/: Cargo.toml
vesper-cli/src/: main.rs  repl.rs  watch.rs
vesper-config/: Cargo.toml
vesper-config/src/: lib.rs
vesper-llm/: Cargo.toml
vesper-llm/src/: lib.rs
vesper-mcp/: Cargo.toml
vesper-mcp/src/: lib.rs
vesper-memory/: Cargo.toml
vesper-memory/src/: lib.rs
vesper-tools/: Cargo.toml
vesper-tools/src/: backup.rs  checkpoint.rs  diff.rs  gather.rs  lib.rs  project.rs  repo_map.rs  sandbox.rs
