[workspace]
resolver = "2"
members = [
    "vesper-cli",
    "vesper-agent",
    "vesper-tools",
    "vesper-llm",
    "vesper-memory",
    "vesper-config",
    "vesper-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ashish Verma"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "io-std", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vesper-agent = { path = "vesper-agent" }
vesper-config = { path = "vesper-config" }
vesper-llm = { path = "vesper-llm" }
vesper-mcp = { path = "vesper-mcp" }
vesper-memory = { path = "vesper-memory" }
vesper-tools = { path = "vesper-tools" }
