[package]
name = "vesper-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent loop for Vesper"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
vesper-config.workspace = true
vesper-llm.workspace = true
vesper-memory.workspace = true
vesper-tools.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
