[package]
name = "vesper-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM backends for Vesper (Ollama and OpenAI-compatible APIs)"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
