[package]
name = "vesper-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem, shell, git, and project tools for Vesper"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
